Tipo de lletra i tamany de lletra

--- a/css/estils.css
+++ b/css/estils.css
@@ -1,1 +1,4 @@
-body {background-color: blue;}
+body {
+        background-color: blue;
+        font-size: x-large;
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;}
